# baselang

./: .gitignore  .nvim.lua  AGENTS.md  CLAUDE.md  Cargo.toml
editors/nvim/: baselang-views.lua
examples/: dead_code_observability.code  fibonacci.code  fibonacci.code.view  observability_hot_call.code
examples/euler/: euler_001.code  euler_001.code.view  euler_002.code  euler_003.code  euler_004.code  euler_005.code  euler_006.code  euler_007.code  euler_008.code  euler_009.code  euler_010.code
src/: ast.rs  eval.rs  lexer.rs  lib.rs  lsp.rs  main.rs  observe.rs  parser.rs
