[package]
name = "baselang"
version = "0.1.0"
edition = "2021"
default-run = "baselang"

[[bin]]
name = "baselang"
path = "src/main.rs"

[[bin]]
name = "baselang-lsp"
path = "src/lsp.rs"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
dashmap = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
